--- a/build.gradle
+++ b/build.gradle
@@ -21,4 +21,17 @@ dependencies {
     // https://mvnrepository.com/artifact/org.jboss.resteasy/resteasy-jackson2-provider
     implementation group: 'org.jboss.resteasy', name: 'resteasy-jackson2-provider', version: '4.7.4.Final'
 
+    //CDI
+    // https://mvnrepository.com/artifact/org.jboss.weld.se/weld-se-core
+    implementation group: 'org.jboss.weld.servlet', name: 'weld-servlet-core', version: '3.1.8.Final'
+
+    //CDI+REST
+    implementation group: 'org.jboss.resteasy', name: 'resteasy-cdi', version: '4.7.4.Final'
+
+}
+
+sourceSets{
+    main {
+        output.resourcesDir = file("${buildDir}/classes/java/main")
+    }
 }
